crates/kirin-derive-core-old/src/ir/snapshots/kirin_derive_core_3__ir__tests__struct_regular.snap
---
source: crates/kirin-derive-core-3/src/ir/mod.rs
expression: node
---
Struct(
    Struct {
        input: DeriveInput {
            attrs: [],
            vis: Visibility::Inherited,
            ident: Ident(
                MyStruct,
            ),
            generics: Generics {
                lt_token: None,
                params: [],
                gt_token: None,
                where_clause: None,
            },
            data: Data::Struct {
                struct_token: Struct,
                fields: Fields::Named {
                    brace_token: Brace,
                    named: [
                        Field {
                            attrs: [],
                            vis: Visibility::Inherited,
                            mutability: FieldMutability::None,
                            ident: Some(
                                Ident(
                                    a,
                                ),
                            ),
                            colon_token: Some(
                                Colon,
                            ),
                            ty: Type::Path {
                                qself: None,
                                path: Path {
                                    leading_colon: None,
                                    segments: [
                                        PathSegment {
                                            ident: Ident(
                                                u32,
                                            ),
                                            arguments: PathArguments::None,
                                        },
                                    ],
                                },
                            },
                        },
                        Comma,
                        Field {
                            attrs: [],
                            vis: Visibility::Inherited,
                            mutability: FieldMutability::None,
                            ident: Some(
                                Ident(
                                    b,
                                ),
                            ),
                            colon_token: Some(
                                Colon,
                            ),
                            ty: Type::Path {
                                qself: None,
                                path: Path {
                                    leading_colon: None,
                                    segments: [
                                        PathSegment {
                                            ident: Ident(
                                                String,
                                            ),
                                            arguments: PathArguments::None,
                                        },
                                    ],
                                },
                            },
                        },
                        Comma,
                    ],
                },
                semi_token: None,
            },
        },
        src: DataStruct {
            struct_token: Struct,
            fields: Fields::Named {
                brace_token: Brace,
                named: [
                    Field {
                        attrs: [],
                        vis: Visibility::Inherited,
                        mutability: FieldMutability::None,
                        ident: Some(
                            Ident(
                                a,
                            ),
                        ),
                        colon_token: Some(
                            Colon,
                        ),
                        ty: Type::Path {
                            qself: None,
                            path: Path {
                                leading_colon: None,
                                segments: [
                                    PathSegment {
                                        ident: Ident(
                                            u32,
                                        ),
                                        arguments: PathArguments::None,
                                    },
                                ],
                            },
                        },
                    },
                    Comma,
                    Field {
                        attrs: [],
                        vis: Visibility::Inherited,
                        mutability: FieldMutability::None,
                        ident: Some(
                            Ident(
                                b,
                            ),
                        ),
                        colon_token: Some(
                            Colon,
                        ),
                        ty: Type::Path {
                            qself: None,
                            path: Path {
                                leading_colon: None,
                                segments: [
                                    PathSegment {
                                        ident: Ident(
                                            String,
                                        ),
                                        arguments: PathArguments::None,
                                    },
                                ],
                            },
                        },
                    },
                    Comma,
                ],
            },
            semi_token: None,
        },
        definition: DefinitionStruct(
            DefinitionStatement {
                attrs: (),
                wraps: false,
                fields: [
                    DefinitionField {
                        wraps: false,
                        attrs: (),
                        extra: (),
                    },
                    DefinitionField {
                        wraps: false,
                        attrs: (),
                        extra: (),
                    },
                ],
                extra: (),
            },
        ),
    },
)
